# affix-tree

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
affix_tree/: __init__.py
tests/: test_affix_trie.py
